...
        }}
      />
      <Tabs.Screen
        name="products"
        options={{
          headerShown: false,
          title: 'Products',
          tabBarIcon: ({
            color,
            focused,
          }: {
            color: string;
            focused: boolean;
...
        }}
      />
      <Tabs.Screen
        name="cart"
        options={{
          headerShown: false,
          title: 'Cart',
          tabBarIcon: ({
            color,
            focused,
          }: {
            color: string;
            focused: boolean;
...
