...
            <Text style={styles.text}>More Details</Text>
          </SmartButton>
          <SmartButton
            onPress={handleAddToCartPress}
            backgroundColor={Colors.highlight}
          >
            <Text style={styles.addToCartText}>Add to Cart</Text>
          </SmartButton>
        </View>
      </View>
    </View>
  );
};
...
